[package]
name = "adas_pilot"
version = "0.1.0"
edition = "2021"

[lib]
name = "adas_pilot"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
image = "0.25"
imageproc = "0.25"
ndarray = "0.15"

[build-dependencies]
pyo3-build-config = "0.21"